feat: 增加获取最新9张图片的接口.
